XO_Project_UAT/Project--XOGrp--UAT/src/objects/Zuora__SubscriptionProductCharge__c.object
<CustomObject>
    <fields>
        <fullName>Category_Taxonomy_ID__c</fullName>
        <description>SF-1821</description>
        <label>Category Taxonomy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountPrice__c</fullName>
        <label>Discount Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>Discount_Total__c / Gross_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <description>SS-2185 Discount Reason on SPC</description>
        <label>Discount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>None-Autocalculated Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD Discretionary Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding Wire Switch Pitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Total__c</fullName>
        <description>Discount total for each line item on the subscription.</description>
        <formula>If(   TEXT(Zuora__Type__c)  == &apos;One-Time&apos;,Value(List_Price__c) - Zuora__TotalContractValue__c,((Zuora__TotalContractValue__c / Zuora__MonthlyRecurringRevenue__c) * Value(List_Price__c)) - Zuora__TotalContractValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount total for each line item on the subscription.</inlineHelpText>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_not_create_inventory__c</fullName>
        <inlineHelpText>Typically if a rate plan has capacity, the charge would occupy an inventory slot.  By checking this (on record creation only), the inventory will not be created.  This is primarily for renewing migrated subscriptions.</inlineHelpText>
        <label>Do not create inventory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EffectiveContract__c</fullName>
        <description>SS-6311</description>
        <formula>Zuora__EffectiveStartDate__c&lt;=TODAY()&amp;&amp;Zuora__EffectiveEndDate__c&gt;=TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FloaterRepID__c</fullName>
        <label>FloaterRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floater_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Floater Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Floater_Rep_Subscription_Product_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Total__c</fullName>
        <description>Gross total for each individual line item on the subscription.</description>
        <formula>If( TEXT(Zuora__Type__c) == &apos;One-Time&apos;,
  Value(List_Price__c),
  If(Zuora__MonthlyRecurringRevenue__c == 0, 
    0,
    ( (Zuora__TotalContractValue__c / Zuora__MonthlyRecurringRevenue__c) * 
      CASE 
      ( 
      Zuora__Subscription__r.Preferred_Payment_Schedule__c, 
      &apos;Month&apos;, Value(List_Price__c), 
      &apos;Quarter&apos;,  Value(List_Price__c)/ 3, 
      &apos;Semi-Annual&apos;,  Value(List_Price__c) / 6, 
      &apos;Annual&apos;,  Value(List_Price__c )/ 12, 
      0 
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross total for each individual line item on the subscription.</inlineHelpText>
        <label>Gross Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Possible_Renewal__c</fullName>
        <description>CSP-1869 | if the creating Opportunity Type is &quot;Renewal&quot; this picklist will be set to &quot;Yes&quot;</description>
        <label>Is Possible Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>SF-583</description>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDE_Email_Launch_Date__c</fullName>
        <description>LDE Email Launch Date on Subscription Product and Charge</description>
        <inlineHelpText>LDE Email Launch Date on Subscription Product and Charge</inlineHelpText>
        <label>LDE Email Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_ContractId__c</fullName>
        <description>Contract Id from Legacy CES -SF-1857</description>
        <inlineHelpText>Contract Id from Legacy CES</inlineHelpText>
        <label>Legacy CES ContractId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_EffectiveEndDate__c</fullName>
        <description>SF-1976. For Migration of existing subscriptions</description>
        <label>Legacy_CES_EffectiveEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_EffectiveStartDate__c</fullName>
        <description>SF-1976. For Migration of existing subscriptions</description>
        <label>Legacy_CES_EffectiveStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_InvoiceId__c</fullName>
        <description>Invoice Id from Legacy CES SF-1857</description>
        <inlineHelpText>Invoice Id from Legacy CES SF-1857</inlineHelpText>
        <label>Legacy CES InvoiceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_PublicationId__c</fullName>
        <description>Publication Id From Legacy CES. SF-1857</description>
        <inlineHelpText>Publication Id From Legacy CES. SF-1857</inlineHelpText>
        <label>Legacy CES PublicationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_RateId__c</fullName>
        <description>RateId from Legacy CES. SF-1857</description>
        <inlineHelpText>RateId from Legacy CES. SF-1857</inlineHelpText>
        <label>Legacy CES RateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_RecordId__c</fullName>
        <description>Record ID from Legacy CES - SF-1857</description>
        <inlineHelpText>Record ID from Legacy CES - SF-1857</inlineHelpText>
        <label>Legacy CES RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_ServiceId__c</fullName>
        <description>Service Id from Legacy CES : Sf-1857</description>
        <inlineHelpText>Service Id from Legacy CES : Sf-1857</inlineHelpText>
        <label>Legacy CES ServiceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CES_SpecId__c</fullName>
        <description>SpecId from Legacy CES- SF-1857</description>
        <inlineHelpText>SpecId from Legacy CES- SF-1857</inlineHelpText>
        <label>Legacy CES SpecId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationVendorDynamicsAccountID__c</fullName>
        <description>The external system GUID of the selected Location/Vendor Account that ties together Salesforce, Partners, Admin Panel, and any other systems.</description>
        <externalId>true</externalId>
        <inlineHelpText>The external system GUID of the selected Location/Vendor Account that ties together Salesforce, Partners, Admin Panel, and any other systems.</inlineHelpText>
        <label>LocationVendorDynamicsAccountID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_ID__c</fullName>
        <description>SF-1821</description>
        <label>Market ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Issue_Id__c</fullName>
        <label>Print Issue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-3143 A field on subscription to stamp the the print issue and 1st cover ship date</description>
        <label>Print Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
        <relationshipName>Subscription_Product_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>SF-612</description>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Zuora__Product__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Text__c</fullName>
        <formula>IF( ISBLANK(Zuora__Product__c) , Zuora__ProductName__c, Zuora__Product__r.Name)</formula>
        <label>Product Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU_Rate_Plan_Name__c</fullName>
        <description>This field is used to retrieve the product rate plan for a given SPC</description>
        <formula>Zuora__ProductSKU_Product__c &amp; &apos;-&apos; &amp; LEFT(Zuora__RatePlanName__c, 80)</formula>
        <label>Product SKU - Rate Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>SF-612</description>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge_Id__c</fullName>
        <label>Quote Rate Plan Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_ID__c</fullName>
        <description>A textfield that captures the ID of the parent Quote Rate Plan in order to sync it to the resulting Subscription Product Charge record. Created specifically for Inventory management, could potentially also be used for Fulfillment purposes.</description>
        <label>Quote Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Id__c</fullName>
        <label>RSD ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalRepID__c</fullName>
        <label>RenewalRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepID__c</fullName>
        <label>SalesRepID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_True_Status__c</fullName>
        <formula>Zuora__Subscription__r.True_Subscription_Status__c</formula>
        <label>Sub True Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermLessThan12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TermLessThan12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_cover_ship_date__c</fullName>
        <description>CSP-3143 A field on subscription to stamp the the print issue and 1st cover ship date</description>
        <formula>Print_Issue__r.Publish_1st_Cover_Ship__c</formula>
        <label>1st cover ship date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_Id_of_Migrated_Charge__c</fullName>
        <description>This Field is used to get populated by zuora Id of migrated charge. After synced back from Zuora&apos;s Subscription Rate Plan Charge</description>
        <externalId>true</externalId>
        <label>Zuora Id of Migrated Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001lGjTEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AccountingCode__c</fullName>
        <description>The accounting code for this charge.</description>
        <label>Accounting Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ApplyDiscountTo__c</fullName>
        <description>Specifies the type of charges a specific discount applies to.</description>
        <label>Apply Discount To</label>
        <picklist>
            <picklistValues>
                <fullName>Null</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Recurring Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__BillCycleDay__c</fullName>
        <description>Indicates the charge&apos;s billing cycle day (BCD), which is when bill runs generate invoices for charges associated with the product rate plan charge or the account.</description>
        <label>Bill Cycle Day</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__BillCycleType__c</fullName>
        <description>Specifies how to determine the billing day for the charge.</description>
        <label>Bill Cycle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingPeriodAlignment__c</fullName>
        <description>Aligns charges within the same subscription if multiple charges begin on different dates.</description>
        <label>Billing Period Alignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingPeriodStartDay__c</fullName>
        <description>Day of month that period starts</description>
        <label>Period Start Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingPeriod__c</fullName>
        <description>e.g. monthly, quarterly, annually</description>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingTiming__c</fullName>
        <label>Billing Timing</label>
        <picklist>
            <picklistValues>
                <fullName>In Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Arrears</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__ChargeNumber__c</fullName>
        <description>The charge number for this charge.</description>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ChargedThroughDate__c</fullName>
        <description>The date through which a customer has been billed for the charge.</description>
        <label>Charged Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__DMRC__c</fullName>
        <description>A delta monthly recurring charge is the change in monthly recurring revenue caused by an amendment or a new subscription.</description>
        <label>DMRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__DTCV__c</fullName>
        <description>After an Amendment, the change in the total contract value (TCV) amount for this charge, compared with its previous value.</description>
        <label>DTCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountAmount__c</fullName>
        <description>Specifies the amount of a fixed-amount discount. You can provide a value for this field if the ChargeModel field value is Discount-Fixed Amount.</description>
        <label>Discount Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountLevel__c</fullName>
        <description>Specifies if the discount applies to just the product rate plan, the entire subscription, or to any activity in the account.</description>
        <label>Discount Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__DiscountPercentage__c</fullName>
        <description>The percentage of discount for a percentage discount. Use this field if the value for ProductRatePlanCharge.</description>
        <label>Discount Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zuora__EffectiveEndDate__c</fullName>
        <description>The date when the (segmented) charge ends (or ended).</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__EndDateCondition__c</fullName>
        <label>End Date Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific End Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__ExtendedAmount__c</fullName>
        <description>Amount billed per period</description>
        <label>Extended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__IncludedUnits__c</fullName>
        <description>Specifies the number of units in the base set of units.</description>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__IsLastSegment__c</fullName>
        <description>Indicates if the segment of the rate plan charge is the most recent segment.</description>
        <label>Is Last Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ListPriceBase__c</fullName>
        <label>List Price Base</label>
        <picklist>
            <picklistValues>
                <fullName>Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Billing Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__MonthlyRecurringRevenue__c</fullName>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__NumberOfPeriods__c</fullName>
        <description>Specifies the number of periods to use when calculating charges in an overage smoothing charge model.</description>
        <label>Number Of Periods</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalId__c</fullName>
        <description>The original ID of the rate plan charge.</description>
        <label>Original Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalProductRatePlanChargeId__c</fullName>
        <description>The ID of the orginal product rate plan charge.</description>
        <label>Original Product Rate Plan Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OverageCalculationOption__c</fullName>
        <description>Determines when to calculate overage charges.</description>
        <label>Overage Calculation Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OveragePrice__c</fullName>
        <description>The price for units over the allowed amount.</description>
        <label>Overage Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__OverageUnusedUnitsCreditOption__c</fullName>
        <description>Determines whether to credit the customer with unused units of usage.</description>
        <label>Overage Unused Units Credit Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceChangeOption__c</fullName>
        <description>Applies an automatic price change when a termed subscription is renewed.</description>
        <label>Price Change Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceIncreasePercentage__c</fullName>
        <description>Specifies the percentage to increase or decrease the price of renewed subscriptions. Use this field if the ProductRatePlanCharge.PriceChangeOption value is set to SpecificPercentageValue.</description>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceTable__c</fullName>
        <label>Price Table</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__ProcessedThroughDate__c</fullName>
        <description>The date until when charges have been processed. When billing in arrears, such as usage, this field value is the the same as the ChargedThroughDate value. This date is the earliest date when a charge can be amended.</description>
        <label>Processed Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductEffectiveEndDate_Product__c</fullName>
        <formula>IF( ISBLANK(Zuora__Product__c) ,  Zuora__ProductEffectiveEndDate__c,  Zuora__Product__r.Zuora__EffectiveEndDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductEffectiveEndDate__c</fullName>
        <label>Product Effective End Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductName_Product__c</fullName>
        <formula>IF( ISBLANK(Zuora__Product__c) ,  Zuora__ProductName__c,  HYPERLINK( Zuora__Product__r.Id , Zuora__Product__r.Name) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductName__c</fullName>
        <label>Product Name (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductRatePlanChargeId__c</fullName>
        <description>The ID of the product rate plan charge associated with the subscription rate plan charge,</description>
        <label>Product RatePlan Charge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductSKU_Product__c</fullName>
        <formula>IF( ISBLANK(Zuora__Product__c) ,  Zuora__ProductSKU__c,  Zuora__Product__r.Zuora__SKU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductSKU__c</fullName>
        <label>Product SKU (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product (Deprecated)</label>
        <referenceTo>Zuora__Product__c</referenceTo>
        <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
        <relationshipName>Subscription_Product_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanDescription__c</fullName>
        <label>Rate Plan Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanEffectiveEndDate__c</fullName>
        <label>Rate Plan Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanId__c</fullName>
        <description>This field holds rateplan id.</description>
        <externalId>true</externalId>
        <label>RatePlan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanName__c</fullName>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RevRecCode__c</fullName>
        <description>Associates this product rate plan charge with a specific revenue recognition code.</description>
        <label>Rev Rec Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RevRecTriggerCondition__c</fullName>
        <description>Specifies when revenue recognition begins.</description>
        <label>Rev Rec Trigger Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Segment__c</fullName>
        <description>The identifying number of the subscription rate plan segment. Segments are numbered sequentially, starting with 1.</description>
        <label>Segment</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SpecificBillingPeriod__c</fullName>
        <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
        <label>Specific Billing Period</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SpecificEndDate__c</fullName>
        <label>Specific End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionChargeNumber__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Charge Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionRatePlanChargeName__c</fullName>
        <label>Subscription Rate Plan Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionRatePlan__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription Rate Plan</label>
        <referenceTo>Zuora__SubscriptionRatePlan__c</referenceTo>
        <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
        <relationshipName>Subscription_Product_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__Subscription__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
        <relationshipName>Subscription_Product_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalContractValue__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TriggerDate__c</fullName>
        <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TriggerEvent__c</fullName>
        <description>Specifies when to start billing the customer for the charge.</description>
        <label>Trigger Event</label>
        <picklist>
            <picklistValues>
                <fullName>Upon Contract Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Service Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Customer Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon a Specific Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__UOM__c</fullName>
        <description>Unit of measure -- basis for pricing (e.g. licenses, seats, users, etc.)</description>
        <label>UOM (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UOM_formula__c</fullName>
        <formula>IF( ISBLANK(Zuora__UnitOfMeasure__c) ,  Zuora__UOM__c,  HYPERLINK( Zuora__UnitOfMeasure__r.Id , Zuora__UnitOfMeasure__r.Name) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
</CustomObject>